# Failure_injection_Major_Project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.runner  Jenkins_Plugin_Plan.md  Jenkinsfile  PROJECT_SUMMARY.md  Project_Plan.md  Prroject_Plan.md  README.md  README_RUN.md  RUN_COMMANDS.md  autonomous_runner.py  chaos-config.example.yml  chaos-controller.example.yml  copilot-instructions.md  demo_guide.md.resolved  docker-compose.yml  gemini_analyzer.py  pyproject.toml  scenario_generator.py  telemetry_exporter.py
.agents/workflows/: jenkinsplugin.md
.github/workflows/: resilience.yml
agent/: Dockerfile  discovery.py  main.py  requirements.txt
agent/injectors/: __init__.py  (+3 more)
chaos_runner/: __init__.py  ai_gate.py  cli.py  code_reviewer.py  config_loader.py  report_generator.py  test_executor.py  threshold_evaluator.py
cli/: chaos-cli.py  example-github-actions.yml
controller/: Dockerfile  main.py  requirements.txt
dashboard/: Dockerfile  package.json  tailwind.config.js
docs/: COMPLETE_JENKINS_DEMO_GUIDE.md  INTEGRATION_GUIDE.md  JENKINS_INTEGRATION.md  JENKINS_QUICKSTART.md  PAPER_RESULTS_GUIDE.md  PRESENTATION_GUIDE.md
framework-controller/: ai_analyst.py  ai_autopilot.py  ai_comparator.py  ai_live_advisor.py  ai_predictor.py  ai_remediation_report.md  config.py  experiment_results.json  main.py  requirements.txt  run_experiment.py  scenario_generation_report.md  scenario_generator.py
framework_controller/: controller.py  requirements.txt
frontend/: index.html  package-lock.json
scripts/: experiment.py
target-app/: docker-compose.yml
(+52 files in other folders)
